[tool.poetry]
name = "kustosz"
version = "23.04.0"
description = "Focus on the worthwhile content with Kustosz, open source self-hosted web application. This package contains backend server."
license = "EUPL-1.2"
authors = ["Mirek Długosz <mirek@mirekdlugosz.com>"]
readme = "README.md"
homepage = "https://www.kustosz.org/"
repository = "https://github.com/KustoszApp/server/"
documentation = "https://docs.kustosz.org/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.3.1"
dacite = "^1.8.0"
Django = "^4.2"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
django-cors-headers = "^4.1.0"
django-extensions = "^3.2.3"
django-filter = "^23.2"
django-taggit = "^4.0.0"
django-taggit-serializer = "^0.1.7"
djangorestframework = "^3.14.0"
dynaconf = "^3.1.12"
hyperlink = "^21.0.0"
listparser = "^0.19"
readability-lxml = "^0.8.1"
reader = "^3.6"
requests-cache = "^1.1.0"
Unalix = "^0.9"
dj-database-url = { version = "^2.0.0", optional = true }
gunicorn = { version = "^20.1.0", optional = true }
supervisor = { version = "^4.2.4", optional = true }
psycopg2 = { version = "^2.9.6", optional = true }
psycopg2-binary = { version = "^2.9.6", optional = true }
redis = { version = "^4.6.0", optional = true }
whitenoise = { version = "^6.5.0", optional = true }

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
dominate = "~2"
factory-boy = "~3"
Faker = "~18"
freezegun = "~1"
pytest = "~7"
pytest-django = "~4"
pytest-mock = "~3"
pytest-factoryboy = "~2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
ipdb = "*"
ipython = "*"
pre-commit = "*"
nox = "*"

[tool.poetry.extras]
container = ["gunicorn", "psycopg2", "redis", "whitenoise"]
installer = ["gunicorn", "redis"]
heroku = ["dj-database-url", "gunicorn", "supervisor", "psycopg2-binary", "redis", "whitenoise"]

[tool.poetry.scripts]
kustosz-manager = 'kustosz.cli.manage:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
