[tool.poetry]
name = "kustosz"
version = "23.08.0"
description = "Focus on the worthwhile content with Kustosz, open source self-hosted web application. This package contains backend server."
license = "EUPL-1.2"
authors = ["Mirek Długosz <mirek@mirekdlugosz.com>"]
readme = "README.md"
homepage = "https://www.kustosz.org/"
repository = "https://github.com/KustoszApp/server/"
documentation = "https://docs.kustosz.org/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

[tool.poetry.dependencies]
python = ">= 3.11, < 3.14"
celery = "^5.4.0"
dacite = "^1.8.0"
Django = "^4.2"
django-celery-beat = "^2.7.0"
django-celery-results = "^2.5.1"
django-cors-headers = "^4.6.0"
django-extensions = "^3.2.3"
django-filter = "^24.3"
django-taggit = "^6.1.0"
django-taggit-serializer = "^0.1.7"
djangorestframework = "^3.15.0"
dynaconf = "^3.2.0"
hyperlink = "^21.0.0"
listparser = "^0.20"
lxml_html_clean = "^0.4.1"
readability-lxml = "^0.8.1"
reader = "^3.15"
requests-cache = "^1.2.0"
Unalix = "^0.9"
dj-database-url = { version = "^2.0.0", optional = true }
gunicorn = { version = "^23.0.0", optional = true }
supervisor = { version = "^4.2.4", optional = true }
psycopg2 = { version = "^2.9.7", optional = true }
psycopg2-binary = { version = "^2.9.7", optional = true }
redis = { version = "^5.2.0", optional = true }
whitenoise = { version = "^6.8.0", optional = true }

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
dominate = "~2"
factory-boy = "~3"
Faker = "~33"
freezegun = "~1"
pytest = "~8"
pytest-django = "~4"
pytest-mock = "~3"
pytest-factoryboy = "~2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "*"
flake8 = "*"
ipdb = "*"
ipython = "*"
pre-commit = "*"
nox = "*"

[tool.poetry.extras]
container = ["gunicorn", "psycopg2", "redis", "whitenoise"]
installer = ["gunicorn", "redis"]
heroku = ["dj-database-url", "gunicorn", "supervisor", "psycopg2-binary", "redis", "whitenoise"]

[tool.poetry.scripts]
kustosz-manager = 'kustosz.cli.manage:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
