[project]
name = "kustosz"
version = "23.08.0"
description = "Focus on the worthwhile content with Kustosz, open source self-hosted web application. This package contains backend server."
license = "EUPL-1.2"
authors = [
    {name = "Mirek Długosz", email = "mirek@mirekdlugosz.com"},
]
readme = "README.md"
homepage = "https://www.kustosz.org/"
repository = "https://github.com/KustoszApp/server/"
documentation = "https://docs.kustosz.org/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
requires-python = ">= 3.11"
dependencies = [
    "celery (>=5.4.0,<6.0.0)",
    "dacite (>=1.8.0,<2.0.0)",
    "Django (>=4.2)",
    "django-celery-beat (>=2.7.0,<3.0.0)",
    "django-celery-results (>=2.5.1,<3.0.0)",
    "django-cors-headers (>=4.6.0,<5.0.0)",
    "django-extensions (>=3.2.3,<4.0.0)",
    "django-filter (==24.3)",
    "django-taggit (>=6.1.0,<7.0.0)",
    "djangorestframework (>=3.15.0,<4.0.0)",
    "dynaconf (>=3.2.0,<4.0.0)",
    "hyperlink (==21.0.0)",
    "listparser (>=0.20,<1.0.0)",
    "lxml_html_clean (>=0.4.1,<1.0.0)",
    "readability-lxml (>=0.8.1,<1.0.0)",
    "reader (>=3.15,<4.0)",
    "requests-cache (>=1.2.0,<2.0.0)",
    "Unalix (>=0.9,<1.0.0)",
]

# we need duplication here until Poetry adds support for PEP-0735
[project.optional-dependencies]
container = [
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2 (>=2.9.7,<3.0.0)",
    "redis (>=5.2.0,<6.0.0)",
    "whitenoise (>=6.8.0,<7.0.0)",
]
installer = [
    "gunicorn (>=23.0.0,<24.0.0)",
    "redis (>=5.2.0,<6.0.0)",
]
heroku = [
    "dj-database-url (>=2.0.0,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "supervisor (>=4.2.4,<5.0.0)",
    "psycopg2-binary (>=2.9.7,<3.0.0)",
    "redis (>=5.2.0,<6.0.0)",
    "whitenoise (>=6.8.0,<7.0.0)",
]
test = [
    "dominate (>=2.9.1,<3.0.0)",
    "factory-boy (>=3.3.1,<4.0.0)",
    "Faker (>=33.3.1,<34.0.0)",
    "freezegun (>=1.5.1,<2.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-django (>=4.9.0,<5.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "pytest-factoryboy (>=2.7.0,<3.0.0)",
]
dev = [
    "ruff",
    "flake8",
    "ipdb",
    "ipython",
    "pre-commit",
    "nox",
]

[project.scripts]
kustosz-manager = 'kustosz.cli.manage:main'

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
